@@ -98,6 +98,7 @@ FA_USE_HEADER   equ             %01000000                       ; Use +3DOS head
 
 #define ESXDOS_RST8_F_OPEN      0x9a
 #define ESXDOS_RST8_F_CLOSE      0x9b
+#define ESXDOS_RST8_F_SYNC      0x9c
 #define ESXDOS_RST8_F_READ      0x9d
 #define ESXDOS_RST8_F_WRITE      0x9e
 
