@@ -16664,7 +16664,7 @@ void menu_storage_settings(MENU_ITEM_PARAMETERS)
 				"Use with caution, "
 				"only some ESXDOS calls are handled, the rest are handled from the mmc/ide virtual file firmware.\n"
 				"The list of supported calls are: \n"
-				"DISK_STATUS, DISK_INFO, M_DRIVEINFO, F_MOUNT, M_GETSETDRV, F_OPEN, F_CLOSE, F_READ, F_WRITE, F_SEEK, F_GETCWD, F_CHDIR, F_STAT, F_UNLINK, F_RENAME, F_OPENDIR, F_READDIR, F_TELLDIR, F_SEEKDIR, F_REWINDDIR, F_FSTAT"
+				"DISK_INFO, DISK_STATUS, F_CHDIR, F_CLOSE, F_FSTAT, F_GETCWD, F_MOUNT, F_OPEN, F_OPENDIR, F_READ, F_READDIR, F_RENAME, F_REWINDDIR, F_SEEK, F_SEEKDIR, F_STAT, F_SYNC, F_TELLDIR, F_UNLINK, F_WRITE, M_DRIVEINFO, M_GETSETDRV"
 				"\n"
 				"Note: you can also enable and disable ESXDOS handler whenever you want, for example in programs that use unsupported functions for handler."
 
