@@ -40,8 +40,9 @@ Fixed bugs on esxdos handler:
 *added ESXDOS_MODE_CREAT_TRUNC mode when opening files
 *BCDE was not returning from a f_seek call
 *fixed mode OPEN_CREAT|WRITE which has appending data after a seek instead of overwriting
-*added f_stat,f_unlink,f_rename,m_drive_info calls
+*added f_stat,f_unlink,f_rename,m_drive_info,f_sync calls
 *fixed loading help screen on esxdos nmi handler
+*fixed loading esxdos files with plus3dos header
 
 Updated to the last Next SD image
 
